premier essai style header tabette

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         #side2 {
           padding: 10px 0 0 5px;
         }
+        header {
+          padding: 0;
+        }
       }
 
       /* Styles pour les écrans moyens et grands */
@@ -91,10 +94,13 @@
 
     <div class="row">
       <header class="jumbotron">
-        <div class="container">
-          <a href="#" class="hidden-xs pull-left"><img src="assets/img/maison.png" alt="logo"></a>
-          <h1>La maison de l'architecte</h1>
-        </div>  
+        <div class="row">
+          <div class="container">
+            <a href="#" class="hidden-xs pull-left"><img src="assets/img/maison.png" alt="logo"></a>
+            <h1>La maison de l'architecte</h1>
+          </div>
+        </div>
+          
       </header>
 
       <nav>
