Style grand écran Ok

--- a/index.html
+++ b/index.html
@@ -91,12 +91,7 @@
           margin: 0;
         }
         header {
-          /*margin: 0;*/
           padding: 3% 4% 4% 4%;
-        }
-
-        .jumbotron {
-          padding-left: 0;
         }
 
         .container {
@@ -131,6 +126,27 @@
         #side1, #side2 {
           padding: 0 0 10px 10px;
         } 
+
+        header {
+          margin-top: 2%;
+        }
+
+        #logo {
+          width: 100%;
+        }
+
+        nav {
+          margin-top: 3%;
+        }
+
+        #title {
+          margin: 3% 0 0 6%;
+        }
+
+        footer {
+          
+          margin-bottom: 2%;
+        }
       }
  
     </style>
@@ -151,18 +167,19 @@
       </header>
 
       <nav>
-        <div id="left">
-          <a href="#"><img src="assets/img/city1.jpg" alt="Nos réalisations"></a>
-        </div>
         <div class="row">
-          <div class="col-sm-6" id="side1">
-            <a href="#"><img src="assets/img/side1.jpg" alt="Nos projets"></a>
+          <div class="col-lg-8" id="left">
+            <a href="#"><img src="assets/img/city1.jpg" alt="Nos réalisations"></a>
           </div>
-          <div class="col-sm-6" id="side2">
-            <a href="#"><img src="assets/img/side2.jpg" alt="Notre ambition"></a>
+          <div class="row">
+            <div class="col-lg-4 col-sm-6" id="side1">
+              <a href="#"><img src="assets/img/side1.jpg" alt="Nos projets"></a>
+            </div>
+            <div class="col-lg-4 col-sm-6" id="side2">
+              <a href="#"><img src="assets/img/side2.jpg" alt="Notre ambition"></a>
+            </div>
           </div>
         </div>
-        
       </nav>
 
       <footer>
